# tradesman

./: .buildinfo  .flake8  README.md  build_analytics_model.html  concepts.html  data_sources.html  genindex.html  index.html  mobility_data.html  model_parameters.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_optional.txt  search.html  searchindex.js  setup.py  synthetic_population.html  synthetic_population_notebook.html  synthetic_population_notebook.ipynb  travel_modelling.html  update_bing_footprint.ipynb  use_instructions.html  zoning.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: build_analytics_model.doctree  concepts.doctree  environment.pickle  index.doctree
_auto_examples/: index.html  plot_tradesman_model.html  sg_execution_times.html
_sources/: build_analytics_model.rst.txt  concepts.rst.txt  data_sources.rst.txt  index.rst.txt  model_parameters.rst.txt  synthetic_population.rst.txt
_static/: documentation_options.js
docs/: Makefile  make.bat  requirements_docs.txt
doctrees/: data_sources.doctree  environment.pickle  mobility_data.doctree  model_parameters.doctree  synthetic_population.doctree  travel_modelling.doctree  use_instructions.doctree
examples/: readme.html
html/: .buildinfo  build_analytics_model.html  concepts.html  data_sources.html  genindex.html  index.html  mobility_data.html  model_parameters.html  objects.inv  search.html  searchindex.js  synthetic_population.html  travel_modelling.html  use_instructions.html
tests/: conftest.py  create_nauru_test.py  test_model.py  (+13 more)
(+169 files in other folders)
