[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[project]
name = "tradesman"
version = "0.1"
description = "A Python package for building complete AequilibraE models from open data"
authors = [
    "Renata Akemi",
     "Pedro Camargo <c@margo.co>",
]
maintainers = ["Pedro Camargo <c@margo.co>",]
license = "MIT"
